airline application few fixed