@@ -1,12 +1,10 @@
-package com.airline.AirlineApplicationDemo.Service;
+package com.airline.AirlineApplicationDemo.Controller;
 
-import com.airline.AirlineApplicationDemo.Controller.FlightController;
 import com.airline.AirlineApplicationDemo.Exception.ApplicationException;
 import com.airline.AirlineApplicationDemo.Model.Destination;
 import com.airline.AirlineApplicationDemo.Model.Flight;
 import com.airline.AirlineApplicationDemo.Model.Origin;
-import com.airline.AirlineApplicationDemo.Repository.FlightRepository;
-import org.junit.Assert;
+import com.airline.AirlineApplicationDemo.Service.FlightService;
 import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
@@ -15,53 +13,53 @@ import org.mockito.Mock;
 import org.mockito.Mockito;
 import org.mockito.junit.MockitoJUnitRunner;
 
-import java.util.*;
+import java.util.Arrays;
+import java.util.Comparator;
+import java.util.List;
+import java.util.Optional;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
-import static org.junit.Assert.*;
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertTrue;
 
 @RunWith(MockitoJUnitRunner.Silent.class)
-public class ServiceTest {
+public class ControllerTest {
 
     @InjectMocks
+    FlightController controller;
+    @Mock
     FlightService service;
 
-    @Mock
-    FlightRepository repository;
-    @Mock
-    FlightController controller;
-
     @Before
-    public void init() {
+    public void init(){
     }
 
-
     @Test
-    public void addFlightServiceTest() {
+    public void addFlightTest() {
 
         Flight flight = new Flight();
-        assertNotNull(flight);
         flight.setFlightNumber(1001);
         flight.setOrigin(new Origin("Kolkata", "CCU"));
         flight.setDestination(new Destination("Mumbai", "BOM"));
         flight.setDuration("30");
 
-        List<Flight> flightList = List.of(flight);
+        List<Flight> flightList = Arrays.asList(flight);
 
         try {
             List<Flight> res = flightList.stream().collect(Collectors.toList());
             if (res != null) {
                 System.out.println("Data not empty: " + res);
-                Mockito.when(repository.save(flight)).thenReturn(flight);
+                Mockito.when(service.addFlight(flight)).thenReturn(flight);
                 controller.addFlight(flight);
             }
         } catch (Exception e) {
-            assertTrue(e instanceof ApplicationException);
+            assertFalse(e instanceof ApplicationException);
         }
     }
+
     @Test
-    public void fetchFlightServiceTest() {
+    public void fetchFlightTest() {
         Flight flight1 = new Flight();
         flight1.setFlightNumber(1001);
         flight1.setOrigin(new Origin("Kolkata", "CCU"));
@@ -74,16 +72,13 @@ public class ServiceTest {
         flight2.setDestination(new Destination("Bhubaneswar", "BBI"));
         flight2.setDuration("30");
 
-        assertNotNull(flight1);
-        assertNotNull(flight2);
-
         List<Flight> flightList = Arrays.asList(flight1, flight2);
 
         try {
             Optional<Flight> mockData = flightList.stream().min(Comparator.comparing(Flight::getDuration));
             if (mockData.isPresent()) {
                 System.out.println("Data not empty: " + mockData.get());
-                Mockito.when(repository.findAll()).thenReturn(flightList);
+                Mockito.when(service.fetchFlightWithSorted()).thenReturn(flightList);
                 controller.fetchFlightWithSorted();
             } else {
                 System.out.println("Data empty: ");
@@ -94,15 +89,22 @@ public class ServiceTest {
     }
 
     @Test
-    public void fetchFlightByIdServiceTest() {
+    public void fetchFlightByIdTest() {
         Flight flight = new Flight();
         flight.setFlightNumber(1001);
         flight.setOrigin(new Origin("Kolkata", "CCU"));
         flight.setDestination(new Destination("Mumbai", "BOM"));
         flight.setDuration("30");
-        List<Flight> flights = List.of(flight);
+
+        List<Flight> flights = Arrays.asList(flight);
+
+       /* Map<Integer, List<Flight>> mapObject = flights.stream()
+                .collect(Collectors.groupingBy(Flight::getFlightNumber))
+                .entrySet().stream()
+                .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));*/
 
         try {
+            //Optional<Flight> lightOptional = Optional.ofNullable((Flight) flights.stream().collect(Collectors.toList()));
             Optional<Integer> lightOptional = flights.stream()
                     .map(Flight::getFlightNumber)
                     .min(Comparator.comparing(Function.identity()));
@@ -110,13 +112,13 @@ public class ServiceTest {
             if(lightOptional.isPresent()){
                 int id = lightOptional.get();
                 System.out.println("FlightNumber is not empty: "+ id);
-                Mockito.when(repository.findById(id)).thenReturn(Mockito.any());
+                Mockito.when(service.fetchFlightById(id)).thenReturn(Mockito.any());
                 controller.fetchFlightById(id);
             }else{
                 System.out.println("FlightNumber is empty: ");
             }
         } catch (Exception e) {
-           assertFalse(e instanceof ApplicationException);
+            assertFalse(e instanceof ApplicationException);
         }
     }
 }
